syntax = "proto3";

package post.v1;

import "google/api/annotations.proto";

message Post {
    string user_id = 1;
    string content_text = 2;
    repeated string images = 3;
    repeated string tags = 4;
    bool visible = 5;
    string date = 6;
}


message CreatePostRequest { Post post = 1; }

message CreatePostResponse {
    uint64 post_id = 1;
}

message GetPostRequest { string user_id = 1; }

message GetPostResponse {
    repeated Post post = 1;
}

service PostService {
    rpc CreatePost(CreatePostRequest) returns (CreatePostResponse) {
        option (google.api.http) = {
			post: "/api/v1/post"
            body: "*"
		};
    }

    rpc GetPost(GetPostRequest) returns (GetPostResponse) {
        option (google.api.http) = {
			get: "/api/v1/posts"
		};
    }
}
